force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/ucinn_ascendv2__Service_Indicator__c.object-meta.xml
<CustomObject>
    <description>Type of action assigned to a constituent that is related to how to approach the constituent based on the constituent&apos;s preferences.</description>
    <label>Service Indicator</label>
    <nameField>
        <label>Service Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>