force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to Academic Organizations with a Fund Source = Degree College or Funding College</description>
    <label>Constituency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Funding College</value>
        </filterItems>
        <infoMessage>Begin typing the Degree College that should be applied and select from results.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Contact Preferences</relationshipLabel>
    <relationshipName>Contact_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>