force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to Academic organization where Fund Source = Degree Department</description>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Funding Department</value>
        </filterItems>
        <infoMessage>Begin typing the Degree Department and select from List.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Contact Preferences (Department)</relationshipLabel>
    <relationshipName>Service_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>