force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <description>Donor ID of constituent, if no constituent then ID of Org</description>
    <formula>IF ( ISBLANK( ucinn_ascendv2__Contact__c ), ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c , ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>