force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ISUF_Comments__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Comments__c</fullName>
    <description>CA: 2/3/2020 Added for ISUF</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>