force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Month_Preference__c.field-meta.xml
<CustomField>
    <fullName>Month_Preference__c</fullName>
    <label>Month Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-January</fullName>
            </value>
            <value>
                <fullName>2-February</fullName>
            </value>
            <value>
                <fullName>3-March</fullName>
            </value>
            <value>
                <fullName>4-April</fullName>
            </value>
            <value>
                <fullName>5-May</fullName>
            </value>
            <value>
                <fullName>6-June</fullName>
            </value>
            <value>
                <fullName>7-July</fullName>
            </value>
            <value>
                <fullName>8-August</fullName>
            </value>
            <value>
                <fullName>9-September</fullName>
            </value>
            <value>
                <fullName>10-October</fullName>
            </value>
            <value>
                <fullName>11-November</fullName>
            </value>
            <value>
                <fullName>12-December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>