force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>4H</fullName>
            </value>
            <value>
                <fullName>Affinity Partners</fullName>
            </value>
            <value>
                <fullName>Annual/Endowment Report</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Book Club</fullName>
            </value>
            <value>
                <fullName>Bug Guide</fullName>
            </value>
            <value>
                <fullName>Business Membership</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Campaign and Fundraising</fullName>
            </value>
            <value>
                <fullName>Career Information</fullName>
            </value>
            <value>
                <fullName>Club mailings</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cyclone Alley</fullName>
            </value>
            <value>
                <fullName>Cyclone Club</fullName>
            </value>
            <value>
                <fullName>Cyclone Sports Complex</fullName>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>DOD Requested</fullName>
            </value>
            <value>
                <fullName>Donor Relations Updates</fullName>
            </value>
            <value>
                <fullName>Email (GDPR)</fullName>
            </value>
            <value>
                <fullName>eNewsletter</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Events - Arizona</fullName>
            </value>
            <value>
                <fullName>Events - Florida</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Financial Planners</fullName>
            </value>
            <value>
                <fullName>Football Invitations</fullName>
            </value>
            <value>
                <fullName>Football Training</fullName>
            </value>
            <value>
                <fullName>Gerdin Citizenship</fullName>
            </value>
            <value>
                <fullName>Gift Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Gift Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>