force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Publications__c.field-meta.xml
<CustomField>
    <fullName>Publications__c</fullName>
    <label>Publications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Advancing Iowa State</fullName>
            </value>
            <value>
                <fullName>Atanasoff Today</fullName>
            </value>
            <value>
                <fullName>Compassionate Client</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>Designotes</fullName>
            </value>
            <value>
                <fullName>Destinations</fullName>
            </value>
            <value>
                <fullName>Discover Business</fullName>
            </value>
            <value>
                <fullName>EInsights</fullName>
            </value>
            <value>
                <fullName>eIowa Stater</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
            <value>
                <fullName>Gentle Doctor</fullName>
            </value>
            <value>
                <fullName>Glimpses</fullName>
            </value>
            <value>
                <fullName>HS Matters</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Inspire</fullName>
            </value>
            <value>
                <fullName>Iowa Stater</fullName>
            </value>
            <value>
                <fullName>ISU Retiree</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Math Matters</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Membership 101</fullName>
            </value>
            <value>
                <fullName>OLLI Catalog</fullName>
            </value>
            <value>
                <fullName>Our Iowa Magazine</fullName>
            </value>
            <value>
                <fullName>Prospectus/Ivy</fullName>
            </value>
            <value>
                <fullName>Script and Score</fullName>
            </value>
            <value>
                <fullName>Stories</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>Varve</fullName>
            </value>
            <value>
                <fullName>Women in Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>