force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Service_Indicator_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator_Value_Type__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Service_Indicator_Value__r.ISUF_Type__c)</formula>
    <label>Service Indicator Value Type</label>
    <type>Text</type>
</CustomField>