force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitation</label>
    <type>Checkbox</type>
</CustomField>