force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Special_Handling_Alert__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Alert__c</fullName>
    <description>Used to indicate that this service indicator is to be displayed on the alert panel.  Derived from the special handling flag on the Service Indicator Value record.</description>
    <formula>If( ucinn_ascendv2__Service_Indicator_Value__r.Active__c == TRUE,
ucinn_ascendv2__Service_Indicator_Value__r.Special_Handling_Alert__c,
False
)</formula>
    <inlineHelpText>Used to indicate that this service indicator is to be displayed on the alert panel.</inlineHelpText>
    <label>Special Handling Alert</label>
    <type>Checkbox</type>
</CustomField>