force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Indicators</relationshipLabel>
    <relationshipName>Service_Indicators_Account</relationshipName>
    <type>Lookup</type>
</CustomField>