force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Active_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Active_Number_Formula__c</fullName>
    <formula>IF( ucinn_ascendv2__Is_Active__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>