force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Code_Formula__c</fullName>
    <formula>ucinn_ascendv2__Service_Indicator_Value__r.ucinn_ascendv2__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>