force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__End_Date_Before_Start_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date_Before_Start_Formula__c</fullName>
    <formula>IF( ucinn_ascendv2__End_Date__c &lt;  ucinn_ascendv2__Start_Date__c , true, false)</formula>
    <label>End Date Before Start</label>
    <type>Checkbox</type>
</CustomField>