force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Is_Display_On_Record_Page__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Display_On_Record_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this record on the Contact&apos;s record page</description>
    <label>Display On Record Page</label>
    <type>Checkbox</type>
</CustomField>