force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Service_Indicator_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Service_Indicator_Name_Auto_Number__c</fullName>
    <displayFormat>SI-{0000000}</displayFormat>
    <label>Service Indicator Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>