force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Service_Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Service_Indicator_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Indicator Value</label>
    <referenceTo>ucinn_ascendv2__Service_Indicator_Value__c</referenceTo>
    <relationshipLabel>Service Indicators</relationshipLabel>
    <relationshipName>Service_Indicators_Service_Indicator_Val</relationshipName>
    <type>Lookup</type>
</CustomField>