force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAMPCALL</fullName>
            </value>
            <value>
                <fullName>CONVERT</fullName>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>iModProc</fullName>
            </value>
            <value>
                <fullName>Annual &amp; Special Gifts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>