force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>