force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_ascendv2__Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit_Formula__c</fullName>
    <formula>TEXT( ucinn_ascendv2__Service_Indicator_Value__r.ucinn_ascendv2__Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>