force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Service_Indicator__c</referenceTo>
    <relationshipLabel>Service Indicators</relationshipLabel>
    <relationshipName>ucinn_portal_Service_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>