force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Update_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Update_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Spouse</label>
    <type>Checkbox</type>
</CustomField>