force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/fields/Visible_to_Campus__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Campus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for sharing settings so campus users don&apos;t view wrong service indicators. the type field that is already on service indicators cant be used because sharing rules cant be setup on formula fields therefore this field and its process builder and trigger are needed.</description>
    <label>Visible to Campus</label>
    <type>Checkbox</type>
</CustomField>