force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/recordTypes/ucinn_ascendv2__Contact_Service_Indicator.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Service_Indicator</fullName>
    <active>true</active>
    <description>A service indicator for a constituent.</description>
    <label>Contact Service Indicator</label>
</RecordType>