force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/validationRules/Require_Const_or_Dept_When_Pub_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Const_or_Dept_When_Pub_Selected</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Publications__c )), ISBLANK( College__c ), ISBLANK( Department__c ))</errorConditionFormula>
    <errorMessage>The Constituent or Department field has to be filled when a publication is selected</errorMessage>
</ValidationRule>