force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/validationRules/ucinn_ascendv2__Start_Date_Should_Be_Less_Than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Start_Date_Should_Be_Less_Than_End_Date</fullName>
    <active>true</active>
    <description>Start date should be less than the end date.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ucinn_ascendv2__Start_Date__c &gt; ucinn_ascendv2__End_Date__c &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Contact_Service_Indicator&quot;,
RecordType.DeveloperName = &quot;Account_Service_Indicator&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>Invalid start and end dates. Start date should be less than the end date.</errorMessage>
</ValidationRule>