force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Value__c</columns>
    <columns>Solicitation__c</columns>
    <columns>College__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>ISUF_Comments__c</columns>
    <columns>Data_Source__c</columns>
    <columns>Department__c</columns>
    <columns>Publications__c</columns>
    <columns>Preferences__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Service_Indicator__c.ucinn_ascendv2__Contact_Service_Indicator</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Service_Indicator_Value__c</field>
        <operation>equals</operation>
        <value>Include Contact</value>
    </filters>
    <filters>
        <field>College__c</field>
        <operation>contains</operation>
        <value>Alumni</value>
    </filters>
    <filters>
        <field>Preferences__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>