force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/listViews/Amy_Service_indicator_List.listView-meta.xml
<ListView>
    <fullName>Amy_Service_indicator_List</fullName>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>NAME</columns>
    <columns>Donor_ID__c</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Value__c</columns>
    <columns>College__c</columns>
    <columns>Department__c</columns>
    <columns>Publications__c</columns>
    <columns>Preferences__c</columns>
    <columns>Solicitation__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Service_Indicator_Value__c</field>
        <operation>contains</operation>
        <value>Do Not Use - Duplicate Record</value>
    </filters>
    <label>Amy Service indicator List</label>
</ListView>