force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/listViews/Contact_Preference_Upload_Format.listView-meta.xml
<ListView>
    <fullName>Contact_Preference_Upload_Format</fullName>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Value__c</columns>
    <columns>Solicitation__c</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>College__c</columns>
    <columns>Data_Source__c</columns>
    <columns>ISUF_Comments__c</columns>
    <columns>Department__c</columns>
    <columns>Preferences__c</columns>
    <columns>Publications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>contains</operation>
        <value>Animal</value>
    </filters>
    <label>Contact Preference Upload Format</label>
</ListView>