force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/listViews/Exclude_Email.listView-meta.xml
<ListView>
    <fullName>Exclude_Email</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>College__c</columns>
    <columns>Preferences__c</columns>
    <columns>Publications__c</columns>
    <columns>Solicitation__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Service_Indicator_Value__c</field>
        <operation>equals</operation>
        <value>Exclude Email</value>
    </filters>
    <label>Exclude Email</label>
</ListView>