force-app/main/default/objects/ucinn_ascendv2__Service_Indicator__c/listViews/Holly_s_View.listView-meta.xml
<ListView>
    <fullName>Holly_s_View</fullName>
    <columns>Donor_ID__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Value__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>Solicitation__c</columns>
    <columns>ISUF_Comments__c</columns>
    <columns>College__c</columns>
    <columns>Department__c</columns>
    <columns>Publications__c</columns>
    <columns>Preferences__c</columns>
    <columns>Data_Source__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Holly Helmer</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Service_Indicator__c.ucinn_ascendv2__Contact_Service_Indicator</value>
    </filters>
    <label>Holly&apos;s View</label>
    <sharedTo>
        <group>Prospect_Development</group>
    </sharedTo>
</ListView>